Added 2D matrix constuctor in ShapedCraftingRecipe